# MassChargeCuration

./: .gitignore  Dockerfile  Dockerfile.txt.bak  README.md  pyproject.toml  requirements.txt  setup.py
Example/: Example-Copy1.ipynb  Example.ipynb  GCF_013408445.1_ASM1340844v1_protein.tsv  Untitled.ipynb  e_coli_core.xml_metabolites.csv  model.xml_metabolites.csv  model.xml_reactions.csv  model_metabolites.csv  model_metabolites.csv.bak  model_metabolites_new.csv  model_reactions.csv  model_reactions.csv.bak
Example/.ipynb_checkpoints/: Example-Copy1-checkpoint.ipynb  Example-checkpoint.ipynb  GCF_013408445.1_ASM1340844v1_protein-checkpoint.faa  model_metabolites.csv-checkpoint.bak  model_reactions-checkpoint.csv
MCC/: __init__.py  core.py  util.py
MCC/Balancing/: MCC.py  __init__.py  adherenceOptimizer.py  balancer.py  formulaOptimizer.py  fullBalancer.py  modelBalancer.py  satCore.py
MCC/DataCollection/: DataCollection.py  __init__.py
MCC/DataCollection/Requests/: BiGG.py  BioCyc.py  MetaNetX.py  ModelSEED.py  databaseInterface.py
MCC/ModelInterface/: CobraPyInterface.py  LibSBMLInterface.py  ModelInterface.py  ReaderInterface.py
MCC/ReportGeneration/: metabolite_report.py  reaction_report.py  visual_report.py
MassChargeCuration.egg-info/: PKG-INFO  SOURCES.txt
